refactor: streamline user info mapping and update CORS settings in AuthorizationServerConfig for improved security and maintainability